Syscollector decoders adapted to enrich the events with host information

--- a/src/engine/ruleset/decoders/wazuh-agent/enrichment/dbsync-host-data.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/enrichment/dbsync-host-data.yml
@@ -13,7 +13,7 @@ metadata:
     compatibility: >
         This decoder has been tested on Wazuh version 4.3
     author:
-        name: Wazuh, Inc.
+        name: Wazuh, Inc. 
         url: https://wazuh.com
         date: 2022/01/11
 
@@ -28,51 +28,55 @@ normalize:
       - host.name: $~json.data.attributes.hostname
       - host.architecture: $~json.data.attributes.architecture
 
+  - check: +ef_not_exists/host.network
+    map:
+      - host.network: +parse_json/{} 
+
   - check: +ef_exists/~json.data.attributes.mac AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
       - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"mac":"/$~json.data.attributes.mac/"/}}}
       - ~host: +parse_json/$~host
-      - host.network: +ef_merge/$~host.network
+      - host.network: +ef_merge_r/$~host.network
 
   - check: +ef_exists/~json.data.attributes.tx_bytes AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
       - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"tx_bytes":"/$~json.data.attributes.tx_bytes/"/}}}
       - ~host: +parse_json/$~host
-      - host.network: +ef_merge/$~host.network
+      - host.network: +ef_merge_r/$~host.network
 
   - check: +ef_exists/~json.data.attributes.rx_bytes AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
       - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"rx_bytes":"/$~json.data.attributes.rx_bytes/"/}}}
       - ~host: +parse_json/$~host
-      - host.network: +ef_merge/$~host.network
+      - host.network: +ef_merge_r/$~host.network
 
   - check: +ef_exists/~json.data.attributes.tx_packets AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
       - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"tx_packets":"/$~json.data.attributes.tx_packets/"/}}}
       - ~host: +parse_json/$~host
-      - host.network: +ef_merge/$~host.network
+      - host.network: +ef_merge_r/$~host.network
 
   - check: +ef_exists/~json.data.attributes.rx_packets AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
       - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"rx_packets":"/$~json.data.attributes.rx_packets/"/}}}
       - ~host: +parse_json/$~host
-      - host.network: +ef_merge/$~host.network
+      - host.network: +ef_merge_r/$~host.network
 
-  - check: +ef_exists/~json.data.attributes.address AND +ef_exists/~json.data.attributes.iface AND ~json.data.attributes.proto==0
+  - check: +ef_exists/~json.data.attributes.address AND +ef_exists/~json.data.attributes.iface AND +i_eq/~json.data.attributes.proto/0
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"ipv4":"/$~json.data.attributes.address/"/}}}
+      - ~host: +s_concat/{"network":{"/$~json.data.attributes.iface/":{"ipv4":"/$~json.data.attributes.address/"/}}}
       - ~host: +parse_json/$~host
-      - host.network: +ef_merge/$~host.network
+      - host.network: +ef_merge_r/$~host.network
 
-  - check: +ef_exists/~json.data.attributes.address AND +ef_exists/~json.data.attributes.iface AND ~json.data.attributes.proto==1
+  - check: +ef_exists/~json.data.attributes.address AND +ef_exists/~json.data.attributes.iface AND +i_eq/~json.data.attributes.proto/1
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"ipv6":"/$~json.data.attributes.address/"/}}}
+      - ~host: +s_concat/{"network":{"/$~json.data.attributes.iface/":{"ipv6":"/$~json.data.attributes.address/"/}}}
       - ~host: +parse_json/$~host
-      - host.network: +ef_merge/$~host.network
+      - host.network: +ef_merge_r/$~host.network
