--- a/src/engine/ruleset/decoders/wazuh-agent/syscollector/syscollector-dbsync-osinfo.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/syscollector/syscollector-dbsync-osinfo.yml
@@ -32,33 +32,39 @@ normalize:
     map:
       - ~json.data.scan_time: "NULL"
 
+  - map: 
+      - ~json.data.tmp.hostname: ~json.data.hostname
   - check:
       - ~json.data.hostname: +s_ne//
     map:
-      - ~json.data.hostname: +s_replace/|/$~escaped_pipe_char
-      - ~json.data.hostname: +s_replace/NULL/_NULL_
+      - ~json.data.tmp.hostname: +s_replace/|/$~escaped_pipe_char
+      - ~json.data.tmp.hostname: +s_replace/NULL/_NULL_
+      - ~do_update_kvdb: true
   - check:
       - ~json.data.hostname: +s_eq//
     map:
-      - ~json.data.hostname: "NULL"
+      - ~json.data.tmp.hostname: "NULL"
   - check:
       - ~json.data.hostname: +ef_not_exists
     map:
-      - ~json.data.hostname: "NULL"
+      - ~json.data.tmp.hostname: "NULL"
 
+  - map:
+      - ~json.data.tmp.architecture: ~json.data.architecture 
   - check:
       - ~json.data.architecture: +s_ne//
     map:
-      - ~json.data.architecture: +s_replace/|/$~escaped_pipe_char
-      - ~json.data.architecture: +s_replace/NULL/_NULL_
+      - ~json.data.tmp.architecture: +s_replace/|/$~escaped_pipe_char
+      - ~json.data.tmp.architecture: +s_replace/NULL/_NULL_
+      - ~do_update_kvdb: true
   - check:
       - ~json.data.architecture: +s_eq//
     map:
-      - ~json.data.architecture: "NULL"
+      - ~json.data.tmp.architecture: "NULL"
   - check:
       - ~json.data.architecture: +ef_not_exists
     map:
-      - ~json.data.architecture: "NULL"
+      - ~json.data.tmp.architecture: "NULL"
 
   - check:
       - ~json.data.os_name: +s_ne//
@@ -204,10 +210,15 @@ normalize:
       - ~json.data.reference: "NULL"
 
   - map:
-      - ~query: +s_concat/agent /$agent.id/ dbsync osinfo /$~json.operation/ /$~json.data.scan_time/|/$~json.data.hostname/|/$~json.data.architecture/|/$~json.data.os_name/|/$~json.data.os_version/|/$~json.data.os_codename/|/$~json.data.os_major/|/$~json.data.os_minor/|/$~json.data.os_patch/|/$~json.data.os_build/|/$~json.data.os_platform/|/$~json.data.sysname/|/$~json.data.release/|/$~json.data.version/|/$~json.data.os_release/|/$~json.data.checksum/|/$~json.data.os_display_version/|/$~json.data.triaged/|/$~json.data.reference/|
+      - ~query: +s_concat/agent /$agent.id/ dbsync osinfo /$~json.operation/ /$~json.data.scan_time/|/$~json.data.tmp.hostname/|/$~json.data.tmp.architecture/|/$~json.data.os_name/|/$~json.data.os_version/|/$~json.data.os_codename/|/$~json.data.os_major/|/$~json.data.os_minor/|/$~json.data.os_patch/|/$~json.data.os_build/|/$~json.data.os_platform/|/$~json.data.sysname/|/$~json.data.release/|/$~json.data.version/|/$~json.data.os_release/|/$~json.data.checksum/|/$~json.data.os_display_version/|/$~json.data.triaged/|/$~json.data.reference/|
       - ~query: +s_replace/||/|NULL|
       - ~query_response: +wdb_query/$~query
 
+  - check: 
+      - ~query_response: +ef_not_exists
+    map: 
+      - ~do_update_kvdb: false
+      
   - check:
       - ~query_response: +s_ne//
     map:
@@ -240,4 +251,7 @@ normalize:
       - ~query_response_values: +ef_delete
       - ~array_of_field: +ef_delete
       - ~escaped_pipe_char: +ef_delete
-      - ~json.data: +ef_delete
+
+  - map:
+      - ~json.data.tmp: +ef_delete
+        
