--- a/src/engine/ruleset/decoders/wazuh-agent/syscollector/syscollector-dbsync-network-address.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/syscollector/syscollector-dbsync-network-address.yml
@@ -47,10 +47,16 @@ normalize:
     map:
       - ~json.data.proto: "NULL"
 
+  - check: +ef_exists/~json.data.address
+    map:
+      - ~do_update_kvdb: true
+
+  - map:
+      - ~json.data.tmp.address: $~json.data.address 
   - check:
       - ~json.data.address: +ef_not_exists
     map:
-      - ~json.data.address: "NULL"
+      - ~json.data.tmp.address: "NULL"
 
   - check:
       - ~json.data.netmask: +ef_not_exists
@@ -73,9 +79,14 @@ normalize:
       - ~json.data.item_id: "NULL"
 
   - map:
-      - ~query: +s_concat/agent /$agent.id/ dbsync network_address /$~json.operation/ /$~json.data.iface/|/$~json.data.proto/|/$~json.data.address/|/$~json.data.netmask/|/$~json.data.broadcast/|/$~json.data.checksum/|/$~json.data.item_id/|
+      - ~query: +s_concat/agent /$agent.id/ dbsync network_address /$~json.operation/ /$~json.data.iface/|/$~json.data.proto/|/$~json.data.tmp.address/|/$~json.data.netmask/|/$~json.data.broadcast/|/$~json.data.checksum/|/$~json.data.item_id/|
       - ~query: +s_replace/||/|NULL|
       - ~query_response: +wdb_query/$~query
+
+  - check: 
+      - ~query_response: +ef_not_exists
+    map: 
+      - ~do_update_kvdb: false
 
   - check:
       - ~query_response: +s_ne//
@@ -94,4 +105,6 @@ normalize:
       - ~query_response_values: +ef_delete
       - ~array_of_field: +ef_delete
       - ~escaped_pipe_char: +ef_delete
-      - ~json.data: +ef_delete
+
+  - map:
+      - ~json.data.tmp: +ef_delete
