--- a/src/engine/ruleset/decoders/wazuh-agent/syscollector/syscollector-dbsync-network-iface-inserted.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/syscollector/syscollector-dbsync-network-iface-inserted.yml
@@ -55,8 +55,7 @@ normalize:
       - ~json.data.adapter: +s_eq//
     map:
       - ~json.data.adapter: "NULL"
-  - check:
-      - ~json.data.adapter: +ef_not_exists
+  - check: +ef_not_exists/~json.data.adapter OR +t_is_null/~json.data.adapter
     map:
       - ~json.data.adapter: ""
 
@@ -93,30 +92,44 @@ normalize:
     map:
       - ~json.data.mtu: ""
 
+  - check: +ef_exists/~json.data.mac OR +ef_exists/~json.data.tx_packets OR +ef_exists/~json.data.rx_packets OR +ef_exists/~json.data.tx_bytes OR +ef_exists/~json.data.rx_bytes
+    map:
+      - ~do_update_kvdb: true
+
+  - map:
+      - ~json.data.tmp.mac: $~json.data.mac
   - check:
       - ~json.data.mac: +ef_not_exists
     map:
-      - ~json.data.mac: ""
+      - ~json.data.tmp.mac: ""
 
+  - map:
+      - ~json.data.tmp.tx_packets: $~json.data.tx_packets  
   - check:
       - ~json.data.tx_packets: +ef_not_exists
     map:
-      - ~json.data.tx_packets: ""
+      - ~json.data.tmp.tx_packets: ""
 
+  - map:
+      - ~json.data.tmp.rx_packets: $~json.data.rx_packets  
   - check:
       - ~json.data.rx_packets: +ef_not_exists
     map:
-      - ~json.data.rx_packets: ""
+      - ~json.data.tmp.rx_packets: ""
 
+  - map:
+      - ~json.data.tmp.tx_bytes: $~json.data.tx_bytes  
   - check:
       - ~json.data.tx_bytes: +ef_not_exists
     map:
-      - ~json.data.tx_bytes: ""
+      - ~json.data.tmp.tx_bytes: ""
 
+  - map:
+      - ~json.data.tmp.rx_bytes: $~json.data.rx_bytes  
   - check:
       - ~json.data.rx_bytes: +ef_not_exists
     map:
-      - ~json.data.rx_bytes: ""
+      - ~json.data.tmp.rx_bytes: ""
 
   - check:
       - ~json.data.tx_errors: +ef_not_exists
@@ -149,8 +162,13 @@ normalize:
       - ~json.data.item_id: ""
 
   - map:
-      - ~query: +s_concat/agent /$agent.id/ dbsync network_iface /$~json.operation/ /$~json.data.scan_time/|/$~json.data.name/|/$~json.data.adapter/|/$~json.data.type/|/$~json.data.state/|/$~json.data.mtu/|/$~json.data.mac/|/$~json.data.tx_packets/|/$~json.data.rx_packets/|/$~json.data.tx_bytes/|/$~json.data.rx_bytes/|/$~json.data.tx_errors/|/$~json.data.rx_errors/|/$~json.data.tx_dropped/|/$~json.data.rx_dropped/|/$~json.data.checksum/|/$~json.data.item_id/|
+      - ~query: +s_concat/agent /$agent.id/ dbsync network_iface /$~json.operation/ /$~json.data.scan_time/|/$~json.data.name/|/$~json.data.adapter/|/$~json.data.type/|/$~json.data.state/|/$~json.data.mtu/|/$~json.data.tmp.mac/|/$~json.data.tmp.tx_packets/|/$~json.data.tmp.rx_packets/|/$~json.data.tmp.tx_bytes/|/$~json.data.tmp.rx_bytes/|/$~json.data.tx_errors/|/$~json.data.rx_errors/|/$~json.data.tx_dropped/|/$~json.data.rx_dropped/|/$~json.data.checksum/|/$~json.data.item_id/|
       - ~query_response: +wdb_update/$~query
+
+  - check: 
+      - ~query_response: +t_is_false
+    map: 
+      - ~do_update_kvdb: false
 
   - check:
       - ~query_response: +t_is_true
@@ -175,5 +193,7 @@ normalize:
       - wazuh.syscollector.netinfo.iface.rx_dropped: $~json.data.rx_dropped
       - ~query: +ef_delete
       - ~query_response: +ef_delete
-      - ~json.data: +ef_delete
       - ~escaped_pipe_char: +ef_delete
+
+  - map:
+      - ~json.data.tmp: +ef_delete
