--- a/src/engine/ruleset/decoders/wazuh-agent/dbsync/dbsync.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/dbsync/dbsync.yml
@@ -1,6 +1,8 @@
 name: decoder/dbsync/0
 
 sources:
+  - decoder/agent-event-enrichment/0
+  # TODO: is this necessary? Can a log come through the dbsync queue withouth having an agent id?
   - decoder/queue-dbsync/0
 
 metadata:
