--- a/src/engine/ruleset/decoders/json.yml
+++ b/src/engine/ruleset/decoders/json.yml
@@ -14,6 +14,7 @@ metadata:
     - https://www.json.org
 
 sources:
+  - decoder/agent-event-enrichment/0
   - decoder/queue-syslog/0
   - decoder/queue-localfile/0
 
