--- a/src/engine/ruleset/decoders/wazuh-agent/enrichment/dbsync-host-data.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/enrichment/dbsync-host-data.yml
@@ -13,7 +13,7 @@ metadata:
     compatibility: >
         This decoder has been tested on Wazuh version 4.3
     author:
-        name: Wazuh, Inc. 
+        name: Wazuh, Inc.
         url: https://wazuh.com
         date: 2022/01/11
 
@@ -24,59 +24,62 @@ normalize:
   - check: +ef_exists/~json.data.attributes.hostname OR +ef_exists/~json.data.attributes.architecture
     map:
       - ~do_update_kvdb: true
-      - host.hostname: $~json.data.attributes.hostname
-      - host.name: $~json.data.attributes.hostname
-      - host.architecture: $~json.data.attributes.architecture
+      - ~kvdb_host.hostname: $~json.data.attributes.hostname
+      - ~kvdb_host.name: $~json.data.attributes.hostname
+      - ~kvdb_host.architecture: $~json.data.attributes.architecture
 
-  - check: +ef_not_exists/host.network
+  - check: +ef_not_exists/~kvdb_host.network
     map:
-      - host.network: +parse_json/{} 
+      - ~kvdb_host.network: +parse_json/{}
 
   - check: +ef_exists/~json.data.attributes.mac AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"mac":"/$~json.data.attributes.mac/"/}}}
-      - ~host: +parse_json/$~host
-      - host.network: +ef_merge_r/$~host.network
+      - ~host_aux: +s_concat/{"network":{"/$~json.data.attributes.name/":{"mac":"/$~json.data.attributes.mac/"/}}}
+      - ~host_aux: +parse_json/$~host_aux
+      - ~kvdb_host.network: +ef_merge_r/$~host_aux.network
 
   - check: +ef_exists/~json.data.attributes.tx_bytes AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"tx_bytes":"/$~json.data.attributes.tx_bytes/"/}}}
-      - ~host: +parse_json/$~host
-      - host.network: +ef_merge_r/$~host.network
+      - ~host_aux: +s_concat/{"network":{"/$~json.data.attributes.name/":{"tx_bytes":"/$~json.data.attributes.tx_bytes/"/}}}
+      - ~host_aux: +parse_json/$~host_aux
+      - ~kvdb_host.network: +ef_merge_r/$~host_aux.network
 
   - check: +ef_exists/~json.data.attributes.rx_bytes AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"rx_bytes":"/$~json.data.attributes.rx_bytes/"/}}}
-      - ~host: +parse_json/$~host
-      - host.network: +ef_merge_r/$~host.network
+      - ~host_aux: +s_concat/{"network":{"/$~json.data.attributes.name/":{"rx_bytes":"/$~json.data.attributes.rx_bytes/"/}}}
+      - ~host_aux: +parse_json/$~host_aux
+      - ~kvdb_host.network: +ef_merge_r/$~host_aux.network
 
   - check: +ef_exists/~json.data.attributes.tx_packets AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"tx_packets":"/$~json.data.attributes.tx_packets/"/}}}
-      - ~host: +parse_json/$~host
-      - host.network: +ef_merge_r/$~host.network
+      - ~host_aux: +s_concat/{"network":{"/$~json.data.attributes.name/":{"tx_packets":"/$~json.data.attributes.tx_packets/"/}}}
+      - ~host_aux: +parse_json/$~host_aux
+      - ~kvdb_host.network: +ef_merge_r/$~host_aux.network
 
   - check: +ef_exists/~json.data.attributes.rx_packets AND +ef_exists/~json.data.attributes.name
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.name/":{"rx_packets":"/$~json.data.attributes.rx_packets/"/}}}
-      - ~host: +parse_json/$~host
-      - host.network: +ef_merge_r/$~host.network
+      - ~host_aux: +s_concat/{"network":{"/$~json.data.attributes.name/":{"rx_packets":"/$~json.data.attributes.rx_packets/"/}}}
+      - ~host_aux: +parse_json/$~host_aux
+      - ~kvdb_host.network: +ef_merge_r/$~host_aux.network
 
   - check: +ef_exists/~json.data.attributes.address AND +ef_exists/~json.data.attributes.iface AND +i_eq/~json.data.attributes.proto/0
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.iface/":{"ipv4":"/$~json.data.attributes.address/"/}}}
-      - ~host: +parse_json/$~host
-      - host.network: +ef_merge_r/$~host.network
+      - ~host_aux: +s_concat/{"network":{"/$~json.data.attributes.iface/":{"ipv4":"/$~json.data.attributes.address/"/}}}
+      - ~host_aux: +parse_json/$~host_aux
+      - ~kvdb_host.network: +ef_merge_r/$~host_aux.network
 
   - check: +ef_exists/~json.data.attributes.address AND +ef_exists/~json.data.attributes.iface AND +i_eq/~json.data.attributes.proto/1
     map:
       - ~do_update_kvdb: true
-      - ~host: +s_concat/{"network":{"/$~json.data.attributes.iface/":{"ipv6":"/$~json.data.attributes.address/"/}}}
-      - ~host: +parse_json/$~host
-      - host.network: +ef_merge_r/$~host.network
+      - ~host_aux: +s_concat/{"network":{"/$~json.data.attributes.iface/":{"ipv6":"/$~json.data.attributes.address/"/}}}
+      - ~host_aux: +parse_json/$~host_aux
+      - ~kvdb_host.network: +ef_merge_r/$~host_aux.network
+
+  - map:
+      - ~host_aux: +ef_delete
