--- a/src/engine/ruleset/decoders/wazuh-agent/rootcheck/rootcheck.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/rootcheck/rootcheck.yml
@@ -1,6 +1,8 @@
 name: decoder/rootcheck/0
 
 sources:
+  - decoder/agent-event-enrichment/0
+  # TODO: is this necessary? Can a log come through the rootcheck queue withouth having an agent id?
   - decoder/queue-rootcheck/0
 
 metadata:
