--- a/src/engine/ruleset/decoders/wazuh-agent/sca/sca.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/sca/sca.yml
@@ -2,6 +2,8 @@
 name: decoder/sca/0
 
 sources:
+  - decoder/agent-event-enrichment/0
+  # TODO: is this necessary? Can a log come through the SCA queue withouth having an agent id?
   - decoder/queue-sca/0
 
 metadata:
