Decoders organization changed and data shost data stored in the expected format

--- a/src/engine/ruleset/decoders/queue-syslog.yml
+++ b/src/engine/ruleset/decoders/queue-syslog.yml
@@ -4,5 +4,8 @@ name: decoder/queue-syslog/0
 metadata:
   description: Exclusive parent decoder por Wazuh-Syslog server (SYSLOG_MQ)
 
+sources:
+  - decoder/agent-event-enrichment/0
+
 check:
   - wazuh.queue: 50 # SYSLOG_MQ -> '2' = 50
