--- a/src/engine/ruleset/decoders/wazuh-agent/syscollector/queue-syscollector.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/syscollector/queue-syscollector.yml
@@ -1,4 +1,12 @@
+---
 name: decoder/queue-syscollector/0
 
+metadata:
+  description: Exclusive parent decoder for Wazuh-Syscollector (SYSCOLLECTOR_MQ)
+
+
+sources:
+  - decoder/agent-event-enrichment/0
+
 check:
-  - wazuh.queue: 100 #64 #+i_eq/64 #SYSCOLLECTOR_MQ 'd'
+  - wazuh.queue: 100 #SYSCOLLECTOR_MQ 'd'
